# datos2.tareaExtraClase2

./: CMakeLists.txt  main.cpp
Facade/: ClaseA.cpp  ClaseA.h  ClaseB.cpp  ClaseB.h  Engine.h  Facade.cpp  Facade.h  HeadLights.h  Main.cpp
Observer/Headers/: Car.h  Observer.h  Subject.h  TrafficLight.h
Observer/Sources/: Car.cpp  TrafficLight.cpp
